# bootstrapper

./: .bazel-build-env  .bazelrc  .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  bootstrap.go  go.mod  go.sum  go_deps.bzl  main.go  nogo.json
.github/workflows/: build.yml
config/: BUILD.bazel  config.go  config_test.go  sample.go
fetcher/: BUILD.bazel  crypto_cmds.go  openssl_cmds.go  scion_cppki_verify.go  scion_cppki_verify_test.go  scion_openapi.go  scion_openapi_test.go  scion_pki_tool_cmds.go
hinting/: BUILD.bazel  dhcp.go  dhcp_request.go  dhcp_request_pf_ip.go  dhcp_request_windows.go  dhcp_windows.go  dhcpv6.go  dns.go  dns_config_resolv.go  dns_config_windows.go  dns_search_domain_fallbacks.go  dns_search_domain_fallbacks_reverse.go  dns_search_domain_fallbacks_test.go  dns_search_domain_fallbacks_whois.go  hinting.go  ipv6_nd_rad.go  mdns.go
res/nginx/: scion
res/packaging/debian/DEBIAN/: postinst  prerm
res/packaging/debian/etc/dhcp/dhclient-enter-hooks.d/: bootstrapper
res/packaging/debian/etc/scion/: bootstrapper.toml
res/packaging/debian/lib/systemd/system/: scion-bootstrapper@.service
res/packaging/rhel/: scion-bootstrapper.spec
