load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "sample.go",
    ],
    importpath = "github.com/netsec-ethz/bootstrapper/config",
    visibility = ["//visibility:public"],
    deps = [
        "//hinting:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
        "@com_github_pelletier_go_toml//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["config_test.go"],
    embed = [":go_default_library"],
    tags = ["unit"],
)
