load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["scion_openapi.go"],
    importpath = "github.com/netsec-ethz/bootstrapper/fetcher",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_inconshreveable_log15//:go_default_library",
        "@org_golang_x_net//context/ctxhttp:go_default_library",
    ],
)
