load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "crypto_cmds.go",
        "openssl_cmds.go",
        "scion_cppki_verify.go",
        "scion_openapi.go",
        "scion_pki_tool_cmds.go",
    ],
    importpath = "github.com/netsec-ethz/bootstrapper/fetcher",
    visibility = ["//visibility:public"],
    deps = [
        "//config:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
        "@org_golang_x_net//context/ctxhttp:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "scion_cppki_verify_test.go",
        "scion_openapi_test.go",
    ],
    embed = [":go_default_library"],
    tags = ["unit"],
    deps = ["@com_github_inconshreveable_log15//:go_default_library"],
)
