load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "dhcp.go",
        "dhcp_request.go",
        "dhcp_request_pf_ip.go",
        "dhcp_request_windows.go",
        "dns.go",
        "dns_config_resolv.go",
        "dns_config_windows.go",
        "hinting.go",
        "mdns.go",
    ],
    importpath = "github.com/netsec-ethz/bootstrapper/hinting",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_grandcat_zeroconf//:go_default_library",
        "@com_github_inconshreveable_log15//:go_default_library",
        "@com_github_insomniacslk_dhcp//dhcpv4:go_default_library",
        "@com_github_insomniacslk_dhcp//rfc1035label:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ] + select({
        "@io_bazel_rules_go//go/platform:aix": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:android": [
            "@com_github_insomniacslk_dhcp//dhcpv4/client4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:darwin": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:dragonfly": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:freebsd": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:illumos": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:ios": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:js": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:linux": [
            "@com_github_insomniacslk_dhcp//dhcpv4/client4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:nacl": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:netbsd": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:openbsd": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:plan9": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:solaris": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//unix:go_default_library",
        ],
        "@io_bazel_rules_go//go/platform:windows": [
            "@org_golang_x_net//ipv4:go_default_library",
            "@org_golang_x_sys//windows:go_default_library",
        ],
        "//conditions:default": [],
    }),
)
